--- a/styles/adaptive-styles.css
+++ b/styles/adaptive-styles.css
@@ -366,14 +366,14 @@
 
     .four-screen .content-box .airplane {
         position: absolute;
-        top: 25%;
+        top: 50%;
         right: unset;
         left: -10%;
         z-index: 0;
         max-width: 320px;
     }
 
-    .four-screen .content-box .airplane img {
+    .four-screen .content-box .airplane .airplane-image {
         width: 320px;
     }
 
