--- a/styles/adaptive-styles.css
+++ b/styles/adaptive-styles.css
@@ -189,6 +189,7 @@
 
     .second-screen .container .container-div .background-image {
         display: none;
+        width: 0;
     }
 
     .second-screen .container .container-div .advantages {
