--- a/styles/styles.css
+++ b/styles/styles.css
@@ -339,7 +339,7 @@
 
 .first-screen .main-screen .container .main-screen-description .main-screen-advantages .main-screen-pagination {
     position: absolute;
-    bottom: 5px;
+    bottom: 0;
     left: calc(50% - 25px);
     width: 50px;
     display: none;
