--- a/styles/adaptive-styles.css
+++ b/styles/adaptive-styles.css
@@ -1,8 +1,9 @@
 @media screen and (max-width: 1169px) {
     .container {
-        max-width: 340px;
+        max-width: 320px;
         padding-right: 10px;
         padding-left: 10px;
+        box-sizing: border-box;
     }
 
     .title {
@@ -331,7 +332,7 @@
     .third-screen .doors .container .doors-container .doors-items .door-item {
         padding: 0;
         border-width: 0;
-        width: 320px;
+        width: 300px;
         height: 100%;
         grid-template:
             'door-main-image'
@@ -353,8 +354,21 @@
         grid-template-columns: repeat(2, 1fr);
         align-items: start;
         gap: 15px;
-        max-width: 320px;
+        max-width: 100%;
         margin-bottom: 30px;
+    }
+
+    .third-screen .doors .container .doors-container .doors-items .door-item .door-description .door-credit {
+        grid-area: door-credit;
+        margin: 0;
+        display: flex;
+        align-items: center;
+    }
+
+    .third-screen .doors .container .doors-container .doors-items .door-item .door-description .door-credit label,
+    .third-screen .doors .container .doors-container .doors-items .door-item .door-description .door-credit .credit-button {
+        width: 67px;
+        font-size: 12px;
     }
 
     .third-screen .doors .container .doors-container .doors-items .door-item .door-characteristic .door-all-photos {
