--- a/styles/adaptive-styles.css
+++ b/styles/adaptive-styles.css
@@ -754,7 +754,7 @@
         padding: 40px 10px;
         width: 320px;
         position: relative;
-        background: linear-gradient(rgb(47, 46, 46), rgb(47, 46, 46)), url(../images/bgMaster.png) center / cover no-repeat, url(../images/bg5.png) right top / auto no-repeat;
+        background: linear-gradient(rgb(47, 46, 46), rgb(47, 46, 46)), url(../images/bgmaster.png) center / cover no-repeat, url(../images/bg5.png) right top / auto no-repeat;
         box-sizing: border-box;
         left: -10px;
         margin-bottom: 70px;
