--- a/styles/adaptive-styles.css
+++ b/styles/adaptive-styles.css
@@ -1,4 +1,4 @@
-@media screen and (max-width: 1169px) {
+@media screen and (max-width: 1169px) and (min-width: 320px){
 
     .container {
         max-width: 320px;
@@ -983,7 +983,7 @@
     }
 
     dialog {
-        width: 340px;
+        width: 320px;
     }
 
     dialog .container .title {
