--- a/styles/adaptive-styles.css
+++ b/styles/adaptive-styles.css
@@ -942,7 +942,7 @@
 
     .seven-ten-screen .container .map .address-gallery .first-image {
         width: 100%;
-        height: auto;
+        height: 105px;
         border-radius: 10px;
     }
 
